<resources>
    <string name="app_name">LearnCodeOnline</string>
    <string name="app_logo">LearnCodeOnline logo</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_having_an_account">Already having an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
</resources>
